css/styles.css
:root {
  --header-height: 130px;
  --left-gutter: 2rem;
  --text-color: #222;
  --primary-hue: 240;
  --contrast-hue: calc(var(--primary-hue) + 100);
  --primary-color: hsl(var(--primary-hue), 100%, 50%);
  --contrast-color: hsl(var(--contrast-hue), 100%, 50%);
  --light-color: hsl(var(--primary-hue), 100%, 95%);

  scroll-behavior: smooth;
}

.layout {
  margin: 0 2rem;
  display: flex;
  align-items: column;
  justify-content: center;
}

/* HEADER */

.heading {
  height: var(--header-height);
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.heading a {
  margin: 0;
  padding: 0;
}

/* PHOTO */

.photo {
  display: none; /* hide on mobile */
  width: 75px;
  height: 75px;
  border-radius: 50%;
  position: fixed;
  left: var(--left-gutter);

  background: no-repeat url("../img/photo.jpg"),
    linear-gradient(var(--primary-color), var(--contrast-color));
  background-blend-mode: screen;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

/* SECTION HEADINGS */

.content h2 {
  position: sticky;
  top: 0px;
  background: rgb(255, 255, 255);
  background: linear-gradient(
    180deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(255, 255, 255, 1) 79%,
    rgba(255, 255, 255, 0) 100%
  );
}

/* MENU */

.toc {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.toc h2 {
  margin-top: 1rem;
}

.toc a {
  position: relative;
  line-height: 1.2rem;
  margin-bottom: 1rem;
  color: var(--text-color);
  text-decoration: none;
  font-weight: 600;
}

.toc > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 3px;
  bottom: -3px;
  left: 0;
  background-color: var(--primary-color);
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
  -webkit-transition: transform 0.2s ease-in-out 0s;
  transform-origin: left;
  transition: transform 0.2s ease-in-out 0s;
}

.toc > a:hover:before {
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
}

.toc > a:nth-of-type(2):before {
  background-color: hsl(calc(var(--primary-hue) + 5), 100%, 50%);
}

.toc > a:nth-of-type(3):before {
  background-color: hsl(calc(var(--primary-hue) + 10), 100%, 50%);
}

.toc > a:nth-of-type(4):before {
  background-color: hsl(calc(var(--primary-hue) + 15), 100%, 50%);
}

.toc > a:nth-of-type(5):before {
  background-color: hsl(calc(var(--primary-hue) + 20), 100%, 50%);
}

.toc > a:nth-of-type(6):before {
  background-color: hsl(calc(var(--primary-hue) + 25), 100%, 50%);
}

.toc > a:nth-of-type(7):before {
  background-color: hsl(calc(var(--primary-hue) + 30), 100%, 50%);
}

.toc > a:nth-of-type(8):before {
  background-color: hsl(calc(var(--primary-hue) + 35), 100%, 50%);
}
.toc > a:nth-of-type(9):before {
  background-color: hsl(calc(var(--primary-hue) + 40), 100%, 50%);
}

em {
  background-color: var(--light-color);
  font-weight: 600;
  padding: 0.1rem 0.3rem;
}

/* DESKTOP SPECIFIC STYLES */

@media screen and (min-width: 1200px) {
  .content,
  .heading {
    width: 700px;
    flex-grow: 0;
  }

  .heading .photo {
    display: block;
  }

  .toc {
    position: fixed;
    left: var(--left-gutter);
    top: var(--header-height);
  }

  .toc h2 {
    display: none;
  }
}

